--- a/index.html
+++ b/index.html
@@ -1,11 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My First Website</title>
+  <meta charset="UTF-8" />
+  <title>My First Website with Disc Grid</title>
+  <style>
+    @font-face {
+      font-family: 'Minecraft';
+      src: url('fonts/MinecraftRegular-Bmg3.otf') format('opentype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    @font-face {
+      font-family: 'MinecraftBold';
+      src: url('fonts/MinecraftBold-nMK1.otf') format('opentype');
+      font-weight: bold;
+      font-style: normal;
+    }
+
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      overflow-x: hidden; 
+      flex-direction: column;
+      font-family: 'Minecraft', sans-serif;
+      color: white;
+      text-align: center;
+      position: relative;
+      background-image: url('assets/images/Background1.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    /* Dark overlay */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0, 0, 0, 0.4);
+      z-index: 0;
+    }
+ 
+    body > * {
+      position: relative;
+      z-index: 1;
+      margin: 0;
+      padding: 0 20px;
+    }
+ 
+    h1 {
+      font-family: 'MinecraftBold', sans-serif;
+      font-weight: bold;
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+ 
+    p {
+      font-family: 'Minecraft', sans-serif;
+      margin-bottom: 40px;
+      font-size: 18px;
+    }
+
+    .disc-grid {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100vw;            /* full viewport width */
+      padding: 10px 0;         /* vertical padding */
+      background: rgba(0,0,0,0.5); /* optional translucent background */
+      
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center; /* center discs horizontally */
+      gap: 0;
+      box-sizing: border-box;
+      z-index: 10;
+    }
+
+    .jukebox {
+      width: 300px;
+      height: 300px;
+      position: fixed;
+      image-rendering: pixelated;
+
+      top: 51%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .disc-grid img {
+      width: 32px;
+      height: 32px;
+      object-fit: contain; /* or 'fill' if you want to stretch */
+      image-rendering: pixelated;
+      margin: 0 2px;
+      display: block;
+      flex: 0 0 auto; /* don’t let flexbox change size */
+      position: relative; /* for dragging */
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Website!</h1>
-  <p>This is my first HTML page.</p>
+  <h1>Jukebox</h1>
+
+  <div class="disc-grid">
+    <img src="assets/images/C418 - 13.png" draggable = false alt="Disc 1" />
+    <img src="assets/images/C418 - cat.png" draggable = false alt="Disc 2" />
+    <img src="assets/images/C418 - blocks.png" draggable = false alt="Disc 3" />
+    <img src="assets/images/C418 - chirp.png" draggable = false alt="Disc 4" />
+    <img src="assets/images/C418 - far.png" draggable = false alt="Disc 5" />
+    <img src="assets/images/C418 - mall.png" draggable = false alt="Disc 6" />
+    <img src="assets/images/C418 - mellohi.png" draggable = false alt="Disc 7" />
+    <img src="assets/images/C418 - stal.png" draggable = false alt="Disc 8" />
+    <img src="assets/images/C418 - strad.png" draggable = false alt="Disc 9" />
+    <img src="assets/images/C418 - ward.png" draggable = false alt="Disc 10" />
+    <img src="assets/images/C418 - 11.png" draggable = false alt="Disc 11" />
+    <img src="assets/images/C418 - wait.png" draggable = false alt="Disc 12" />
+    <img src="assets/images/Lena Raine - otherside.png" draggable = false alt="Disc 13" />
+    <img src="assets/images/Samuel Åberg - 5.png" draggable = false alt="Disc 14" />
+    <img src="assets/images/Lena Raine - Pigstep.png" draggable = false alt="Disc 15" />
+    <img src="assets/images/Aaron Cherof - Relic.png" draggable = false alt="Disc 16" />
+    <img src="assets/images/Lena Raine - Creator.png" draggable = false alt="Disc 17" />
+    <img src="assets/images/Lena Raine - Creator (Music Box).png" draggable = false alt="Disc 19" />
+    <img src="assets/images/Aaron Cherof - Precipice.png" draggable = false alt="Disc 19" />
+    <img src="assets/images/Amos Roddy - Tears.png" draggable = false alt="Disc 20" />
+  </div>
+
+  <div class="jukebox" id="jukebox">
+    <img src="assets/images/Block_Jukebox.png" draggable = false alt="Jukebox" />
+  </div>
+
+  <script>
+    const discGrid = document.querySelector('.disc-grid');
+    const discs = discGrid.querySelectorAll('img');
+    const jukebox = document.getElementById('jukebox');
+
+    discs.forEach(disc => {
+      disc.style.width = '64px';
+      disc.style.height = '64px';
+      disc.style.objectFit = 'contain';
+      disc.style.position = 'relative';
+      disc.style.imageRendering = "pixelated";
+      disc.addEventListener('mousedown', startDrag);
+
+      function startDrag(e) {
+        const originalPosition = disc.style.position || 'relative';
+
+        e.preventDefault();
+
+        // Get current position of the disc relative to the viewport
+        const rect = disc.getBoundingClientRect();
+
+        // Calculate offsets of mouse within the disc
+        const shiftX = e.clientX - rect.left;
+        const shiftY = e.clientY - rect.top;
+
+        // Store original absolute position relative to the document
+        const originalLeft = rect.left + window.pageXOffset;
+        const originalTop = rect.top + window.pageYOffset;
+
+        // Set disc to fixed positioning to freely move it on screen
+        disc.style.position = 'fixed';
+        disc.style.zIndex = 1000;
+        disc.style.left = rect.left + 'px';
+        disc.style.top = rect.top + 'px';
+
+        function moveAt(pageX, pageY) {
+          disc.style.left = (pageX - shiftX) + 'px';
+          disc.style.top = (pageY - shiftY) + 'px';
+        }
+
+        moveAt(e.pageX, e.pageY);
+
+        // Mouse move handler to move disc with mouse
+        function onMouseMove(event) {
+          moveAt(event.pageX, event.pageY);
+        }
+
+        // Add global mousemove listener to drag disc
+        document.addEventListener('mousemove', onMouseMove);
+
+        // Mouse up handler to drop disc
+        document.addEventListener('mouseup', function onMouseUp(event) {
+        document.removeEventListener('mousemove', onMouseMove);
+        document.removeEventListener('mouseup', onMouseUp);
+
+        const jukeboxRect = jukebox.getBoundingClientRect();
+
+        const droppedOnJukebox =
+          event.clientX >= jukeboxRect.left &&
+          event.clientX <= jukeboxRect.right &&
+          event.clientY >= jukeboxRect.top &&
+          event.clientY <= jukeboxRect.bottom;
+
+        if (droppedOnJukebox) {
+          // Keep disc at drop position (fixed)
+          disc.style.left = event.pageX - shiftX + 'px';
+          disc.style.top = event.pageY - shiftY + 'px';
+          disc.style.position = 'fixed';
+          disc.style.zIndex = 1000;
+
+          // Keep disc appended to body for free movement
+          document.body.appendChild(disc);
+        } else {
+          // Return disc to original position inside the grid
+
+          // Remove fixed positioning styles
+          disc.style.position = originalPosition; // restore original CSS position (probably 'relative')
+          disc.style.left = '';
+          disc.style.top = '';
+          disc.style.zIndex = '';
+
+          // Remove any transition so it snaps back nicely
+          disc.style.transition = '';
+
+          // Append disc back to the original container (.disc-grid)
+          discGrid.appendChild(disc);
+        }
+      }, { once: true });
+    }
+
+    disc.ondragstart = () => false;
+  });
+</script>
 </body>
 </html>
