--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </div>
 
   <!-- Audio player element -->
-  <audio id="audio-player"></audio>
+  <audio id="audio-player" controls></audio>
 
   <script>
     const discGrid = document.querySelector('.disc-grid');
