--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
     <img src="assets/images/Block_Jukebox.png" draggable="false" alt="Jukebox" />
   </div>
 
-  <!-- Audio player element -->
-  <audio id="audio-player" controls></audio>
+  <audio id="audio-player"></audio>
 
   <script>
     const discGrid = document.querySelector('.disc-grid');
