--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           if (droppedOnJukebox) {
             const discName = disc.alt.trim();
 
-            audioPlayer.src = `assets/audio/${discName}.mp3`;
+            audioPlayer.src = `assets/sounds/${discName}.mp3`;
             audioPlayer.play();
             updateCursor();
           }
