--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -1,1 +1,153 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Centered Bingo Card</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+      background: #000000;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding-top: 40px;
+    }
+
+    .bingo-card {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      width: 400px;
+      aspect-ratio: 1 / 1;
+      justify-content: center;
+    }
+
+    .cell {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #000000;
+      border: 2px solid #00ccff;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 6px;
+      text-align: center;
+      color: white;
+
+      aspect-ratio: 1 / 1;
+      width: 100px;
+      height: 100px;
+
+      word-break: break-word;
+      white-space: normal;
+      overflow-wrap: break-word;
+      box-sizing: border-box;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    /* Text span with higher z-index so text is always on top */
+    .cell-text {
+      position: relative;
+      z-index: 2;
+    }
+
+    /* Red X behind text for marked cells */
+    .cell.marked::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-image: url("assets/images/red_x.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      opacity: 0.9;
+      z-index: 0;
+    }
+
+    /* Free cell styles */
+    .cell.free {
+      background-color: transparent;
+      color: white;
+      border-color: #00ccff;
+      cursor: default; /* not clickable */
+    }
+
+    /* Yellow X always visible on free cell */
+    .cell.free::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-image: url("assets/images/yellow_x.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      opacity: 0.9;
+      z-index: 0;
+    }
+  </style>
+</head>
+<body>
+  <div class="bingo-card" id="bingoCard"></div>
+
+  <script>
+    const bingoWords = [
+      "Outside Troll Button", "Unindicated Instakills", "Overused Music", "Copy Paste", "GUI Clog", 
+      "Cash Grab", "Ending Couch", "Skippable Outside", "No Win Badge", "Sword Givers",
+      "Entire Tower is Skippable", "Korean Elevators", "Donation Board", "Visible Building Kit", "Many Unintended Skips",
+      "Horrible Stud Misalignments", "Server Client Objects", "Trul GUI", "Horrible Gameplay", "Actually Good Gameplay",
+      "Massive Difficulty Spikes", "Very Punishing", "Disappearing Platforms", "Broken Scripts", "Trul Thumbnail",
+      "Pick a Path", "Hacker Infested", "Way Too Short", "Way Too Long", "Player Collision",
+      "Practice Area", "Wallhop Themed", "Teleports to Other Towers", "Empty Tower", "No Creativity",
+      "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
+      "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
+      "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame"
+    ];
+
+    function shuffle(array) {
+      return array.sort(() => Math.random() - 0.5);
+    }
+
+    function generateBingoCard() {
+      const container = document.getElementById("bingoCard");
+      container.innerHTML = "";
+
+      const shuffled = shuffle([...bingoWords]);
+      let index = 0;
+
+      for (let i = 0; i < 25; i++) {
+        const cell = document.createElement("div");
+        cell.className = "cell";
+
+        const textSpan = document.createElement("span");
+        textSpan.className = "cell-text";
+
+        if (i === 12) {
+          textSpan.textContent = "FREE";
+          cell.classList.add("free");
+          // No click listener on free cell
+        } else {
+          textSpan.textContent = shuffled[index++];
+          // Add click toggling only for non-free cells
+          cell.addEventListener("click", () => {
+            cell.classList.toggle("marked");
+          });
+        }
+
+        cell.appendChild(textSpan);
+        container.appendChild(cell);
+      }
+    }
+
+    generateBingoCard();
+  </script>
+</body>
+</html>
 
