--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Centered Bingo Card</title>
+  <title>Korean Tower Bingo</title>
   <style>
     html, body {
       margin: 0;
