--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -108,7 +108,8 @@
       "Practice Area", "Wallhop Themed", "Teleports to Other Towers", "Empty Tower", "No Creativity",
       "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
       "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
-      "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame"
+      "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
+      "Gears Unusable Without Paying"
     ];
 
     function shuffle(array) {
