--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -109,7 +109,7 @@
       "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
       "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
       "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
-      "Gears Unusable Without Paying", "Final Stretch Over Nothing", "Description Doesn't Make Sense", "Opaque Cancollide False Section"
+      "Gears Unusable Without Paying", "Final Stretch Over Nothing", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Gear / Skip Secions"
     ];
 
     function shuffle(array) {
