--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -103,7 +103,7 @@
       "Cash Grab", "Ending Couch", "Skippable Outside", "No Win Badge", "Sword Givers",
       "Entire Tower is Skippable", "Korean Elevators", "Donation Board", "Visible Building Kit", "Many Unintended Skips",
       "Horrible Stud Misalignments", "Server Client Objects", "Trul GUI", "Horrible Gameplay", "Actually Good Gameplay",
-      "Massive Difficulty Spikes", "Very Punishing", "Disappearing Platforms", "Broken Scripts", "Trul Thumbnail",
+      "Massive Difficulty Spikes", "Punishing", "Disappearing Platforms", "Broken Scripts", "Trul Thumbnail",
       "Pick a Path", "Hacker Infested", "Way Too Short", "Way Too Long", "Player Collision",
       "Practice Area", "Wallhop Themed", "Teleports to Other Towers", "Empty Tower", "No Creativity",
       "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
