--- a/slopTowerRoulette.html
+++ b/slopTowerRoulette.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   <h1>Slop Tower Roulette</h1>
-  <button onclick="goToRandomLink()">New Slop Tower</button>
+  <button onclick="goToRandomLink()">Random Slop Tower</button>
 
   <script>
     const links = [
