--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -96,7 +96,7 @@
   <script>
     const bingoWords = [
       "Outside Troll Button", "Unindicated Instakills", "Overused Music", "Copy Paste", "GUI Overdose", 
-      "Cash Grab", "Ending Couch", "Skippable Outside", "No Win Badge", "Sword Givers",
+      "Cash Grab", "Ending Couch/Bench", "Skippable Outside", "No Win Badge", "Sword Givers",
       "Entire Tower is Skippable", "Korean Elevators", "Donation Board", "Visible Building Kit", "Many Unintended Skips",
       "Horrible Stud Misalignments", "Server Client Objects", "Trul GUI", "Horrible Gameplay", "Actually Good Gameplay",
       "Massive Difficulty Spikes", "Punishing", "Disappearing Platforms", "Broken Scripts", "Trul Thumbnail",
