--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -106,7 +106,7 @@
       "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
       "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
       "Gears Unusable Without Paying", "Final Stretch Over Nothing", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
-      "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls"
+      "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls", "Nothing Burger"
     ];
 
     function shuffle(array) {
