--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -107,7 +107,7 @@
       "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
       "Gears Unusable Without Paying", "Final Stretch Over Nothing", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
       "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls", "Nothing Burger", "Random Invisible Truss Skips",
-      "Unfinished", "Probably Untested"
+      "Unfinished", "Probably Untested", "Modifies Avatar"
     ];
 
     function shuffle(array) {
