--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -105,7 +105,7 @@
       "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
       "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
       "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
-      "Gears Unusable Without Paying", "Final Stretch Over Nothing", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
+      "Gears Unusable Without Paying", "Final Stretch Over Void", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
       "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls", "Nothing Burger", "Random Invisible Truss Skips",
       "Unfinished", "Probably Untested", "Modifies Avatar", "Random Kids Voice Chat", "Admin Abuse",
       "Overstimulated Ending"
