--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Tower Pages</title>
+  <title>Tango's Website</title>
   <style>
     body {
       background: #000;
@@ -11,15 +11,19 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
+      padding-top: 60px; /* Move content down a little */
+    }
+
+    h1 {
+      margin-bottom: 40px;
     }
 
     a {
       color: #00ffff;
       text-decoration: none;
-      margin: 10px;
+      margin: 15px;
       font-size: 1.5em;
+      font-weight: bold;
     }
 
     a:hover {
@@ -28,9 +32,9 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to My Tower Pages</h1>
-  <a href="jukebox.html">🎵 Jukebox</a>
-  <a href="slopTowerRoulette.html">🎲 Slop Tower Roulette</a>
-  <a href="koreanTowerBingo.html">🧩 Korean Tower Bingo</a>
+  <h1>welcome to tango's website....</h1>
+  <a href="jukebox.html">Jukebox</a>
+  <a href="slopTowerRoulette.html">Slop Tower Roulette</a>
+  <a href="koreanTowerBingo.html">Korean Tower Bingo</a>
 </body>
 </html>
