--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -108,7 +108,7 @@
       "Gears Unusable Without Paying", "Final Stretch Over Void", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
       "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls", "Nothing Burger", "Random Invisible Truss Skips",
       "Unfinished", "Probably Untested", "Modifies Avatar", "Random Kids Voice Chat", "Admin Abuse",
-      "Overstimulated Ending"
+      "Overstimulated Ending", "Leaderboard"
     ];
 
     function shuffle(array) {
